tests/machine/x/ocaml/string_prefix_slice.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_prefix_slice.ml", line 29, characters 26-31:
29 |   print_endline (__show ((slice s1 0 List.length prefix = prefix)));
                               ^^^^^
Error: This function has type 'a list -> int -> int -> 'a list
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 29):
  27 | 
  28 | let () =
  29 |   print_endline (__show ((slice s1 0 List.length prefix = prefix)));
  30 |   print_endline (__show ((slice s2 0 List.length prefix = prefix)));
  31 | 
